replace not-existent triangle with exception

--- a/DEV-7/TypeOfTriangle.csproj
+++ b/DEV-7/TypeOfTriangle.csproj
@@ -43,11 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DetectorTriangleType.cs" />
+    <Compile Include="TriangleTypeDetector.cs" />
     <Compile Include="EquilateralorTriangle.cs" />
     <Compile Include="InputerForTriangleSides.cs" />
     <Compile Include="IsoscelesTriangle.cs" />
-    <Compile Include="NotExistentTrianlge.cs" />
     <Compile Include="Runner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Triangle.cs" />
