--- a/DEV-7/TypeOfTriangle.csproj
+++ b/DEV-7/TypeOfTriangle.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TriangleTypeDetector.cs" />
+    <Compile Include="EquilateralorTriangleBuilder.cs" />
+    <Compile Include="IsoscelesTriangleBuilder.cs" />
+    <Compile Include="TriangleTypeException.cs" />
     <Compile Include="EquilateralorTriangle.cs" />
     <Compile Include="InputerForTriangleSides.cs" />
     <Compile Include="IsoscelesTriangle.cs" />
@@ -52,6 +54,7 @@
     <Compile Include="Triangle.cs" />
     <Compile Include="TriangleBuilder.cs" />
     <Compile Include="UsualTriangle.cs" />
+    <Compile Include="UsualTriangleBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
