--- a/DEV-9/ReplacementOfCharacterGroups.csproj
+++ b/DEV-9/ReplacementOfCharacterGroups.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
+    <Compile Include="FileReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Randomizer.cs" />
     <Compile Include="Replacer.cs" />
