added list array builder

--- a/DEV-10/CollectOneArrayFromN.csproj
+++ b/DEV-10/CollectOneArrayFromN.csproj
@@ -43,7 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayBuilder.cs" />
+    <Compile Include="ArrayCollector.cs" />
     <Compile Include="EntryPoint.cs" />
+    <Compile Include="ListWithArraysBuilder.cs" />
+    <Compile Include="ListWithArraysPrinter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
