--- a/DEV-11/Transliteration.csproj
+++ b/DEV-11/Transliteration.csproj
@@ -46,7 +46,7 @@
     <Compile Include="EntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextFileReader.cs" />
-    <Compile Include="TransliterationDictionaries.cs" />
+    <Compile Include="Transliterator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
