--- a/DEV-7/TypeOfTriangle.csproj
+++ b/DEV-7/TypeOfTriangle.csproj
@@ -43,19 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EquilateralorTriangleBuilder.cs" />
-    <Compile Include="IsoscelesTriangleBuilder.cs" />
+    <Compile Include="TriangleBuilders\EquilateralTriangleBuilder.cs" />
+    <Compile Include="TriangleBuilders\IsoscelesTriangleBuilder.cs" />
     <Compile Include="TriangleBuildException.cs" />
     <Compile Include="TriangleTypeException.cs" />
-    <Compile Include="EquilateralorTriangle.cs" />
+    <Compile Include="Triangles\EquilateralTriangle.cs" />
     <Compile Include="InputerForTriangleSides.cs" />
-    <Compile Include="IsoscelesTriangle.cs" />
+    <Compile Include="Triangles\IsoscelesTriangle.cs" />
     <Compile Include="Runner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Triangle.cs" />
-    <Compile Include="TriangleBuilder.cs" />
-    <Compile Include="UsualTriangle.cs" />
-    <Compile Include="UsualTriangleBuilder.cs" />
+    <Compile Include="Triangles\Triangle.cs" />
+    <Compile Include="TriangleBuilders\TriangleBuilder.cs" />
+    <Compile Include="Triangles\UsualTriangle.cs" />
+    <Compile Include="TriangleBuilders\UsualTriangleBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
