--- a/DEV-12/TypeOfTriangle.Tests.csproj
+++ b/DEV-12/TypeOfTriangle.Tests.csproj
@@ -50,12 +50,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Triangles.Tests\EquilateralTriangleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TriangleBuilders.Tests\" />
-    <Folder Include="Triangles.Tests\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
