--- a/DEV-12/TypeOfTriangle.Tests.csproj
+++ b/DEV-12/TypeOfTriangle.Tests.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -54,7 +55,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="DataSources\" />
     <Folder Include="TriangleBuilders.Tests\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DEV-7\TypeOfTriangle.csproj">
+      <Project>{e0131dee-6e34-4187-bb7f-bec16f484ba5}</Project>
+      <Name>TypeOfTriangle</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
