--- a/DEV-12/TypeOfTriangle.Tests.csproj
+++ b/DEV-12/TypeOfTriangle.Tests.csproj
@@ -46,17 +46,23 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TriangleBuilders.Tests\EquilateralTriangleBuilderTests.cs" />
+    <Compile Include="TriangleBuilders.Tests\IsoscelesTriangleBuilderTests.cs" />
+    <Compile Include="TriangleBuilders.Tests\UsualTriangleBuilderTests.cs" />
     <Compile Include="Triangles.Tests\EquilateralTriangleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Triangles.Tests\IsoscelesTriangleTests.cs" />
+    <Compile Include="Triangles.Tests\UsualTriangleTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DataSources\" />
-    <Folder Include="TriangleBuilders.Tests\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DEV-7\TypeOfTriangle.csproj">
