--- a/DEV-13/StaffSelection.csproj
+++ b/DEV-13/StaffSelection.csproj
@@ -43,8 +43,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Criterions\MaxProductivityCriterion.cs" />
+    <Compile Include="Criterions\MinAmountCriterion.cs" />
+    <Compile Include="Criterions\MinCountOfWorkers.cs" />
+    <Compile Include="EntryPoint.cs" />
+    <Compile Include="Fellow Workers Builders\FellowWorkerBuilder.cs" />
+    <Compile Include="Fellow Workers Builders\JuniorBuilder.cs" />
+    <Compile Include="Fellow Workers Builders\LeadBuilder.cs" />
+    <Compile Include="Fellow Workers Builders\MiddleBuilder.cs" />
+    <Compile Include="Fellow Workers Builders\SeniorBuilder.cs" />
+    <Compile Include="Fellow Workers\FellowWorker.cs" />
+    <Compile Include="Fellow Workers\Junior.cs" />
+    <Compile Include="Fellow Workers\Lead.cs" />
+    <Compile Include="Fellow Workers\Middle.cs" />
+    <Compile Include="Fellow Workers\Senior.cs" />
+    <Compile Include="FellowWorkerException.cs" />
+    <Compile Include="ICriterionSelectable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaffSelector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
