--- a/DEV-13/StaffSelection.csproj
+++ b/DEV-13/StaffSelection.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StaffSelectionConsoleHandler.cs" />
     <Compile Include="Criterions\MaxProductivityCriterion.cs" />
     <Compile Include="Criterions\MinAmountCriterion.cs" />
     <Compile Include="Criterions\MinCountOfWorkers.cs" />
