--- a/DEV-13/StaffSelection.csproj
+++ b/DEV-13/StaffSelection.csproj
@@ -52,20 +52,21 @@
     <Compile Include="Criterions\MinAmountCriterion.cs" />
     <Compile Include="Criterions\MinCountOfWorkers.cs" />
     <Compile Include="EntryPoint.cs" />
-    <Compile Include="Fellow Workers Builders\FellowWorkerBuilder.cs" />
-    <Compile Include="Fellow Workers Builders\JuniorBuilder.cs" />
-    <Compile Include="Fellow Workers Builders\LeadBuilder.cs" />
-    <Compile Include="Fellow Workers Builders\MiddleBuilder.cs" />
-    <Compile Include="Fellow Workers Builders\SeniorBuilder.cs" />
-    <Compile Include="Fellow Workers\FellowWorker.cs" />
-    <Compile Include="Fellow Workers\Junior.cs" />
-    <Compile Include="Fellow Workers\Lead.cs" />
-    <Compile Include="Fellow Workers\Middle.cs" />
-    <Compile Include="Fellow Workers\Senior.cs" />
+    <Compile Include="FellowWorkersBuilders\FellowWorkerBuilder.cs" />
+    <Compile Include="FellowWorkersBuilders\JuniorBuilder.cs" />
+    <Compile Include="FellowWorkersBuilders\LeadBuilder.cs" />
+    <Compile Include="FellowWorkersBuilders\MiddleBuilder.cs" />
+    <Compile Include="FellowWorkersBuilders\SeniorBuilder.cs" />
+    <Compile Include="FellowWorkers\FellowWorker.cs" />
+    <Compile Include="FellowWorkers\Junior.cs" />
+    <Compile Include="FellowWorkers\Lead.cs" />
+    <Compile Include="FellowWorkers\Middle.cs" />
+    <Compile Include="FellowWorkers\Senior.cs" />
     <Compile Include="FellowWorkerException.cs" />
     <Compile Include="ICriterionSelectable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaffSelector.cs" />
+    <Compile Include="Team.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
