--- a/DEV-13/StaffSelection.csproj
+++ b/DEV-13/StaffSelection.csproj
@@ -50,7 +50,7 @@
     <Compile Include="StaffSelectionConsoleHandler.cs" />
     <Compile Include="Criterions\MaxProductivityCriterion.cs" />
     <Compile Include="Criterions\MinAmountCriterion.cs" />
-    <Compile Include="Criterions\MinCountOfWorkers.cs" />
+    <Compile Include="Criterions\MinCountOfElderWorkersCriterion.cs" />
     <Compile Include="EntryPoint.cs" />
     <Compile Include="FellowWorkersBuilders\FellowWorkerBuilder.cs" />
     <Compile Include="FellowWorkersBuilders\JuniorBuilder.cs" />
