--- a/DEV-13.Tests/StaffSelection.Tests.csproj
+++ b/DEV-13.Tests/StaffSelection.Tests.csproj
@@ -45,12 +45,26 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FellowWorkers.Tests\JuniorTests.cs" />
+    <Compile Include="FellowWorkers.Tests\MiddleTests.cs" />
+    <Compile Include="FellowWorkers.Tests\SeniorTests.cs" />
+    <Compile Include="FellowWorkers.Tests\LeadTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaffSelectorTests.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DEV-13\StaffSelection.csproj">
+      <Project>{5486C575-119E-490B-9D70-6DFBE623FABE}</Project>
+      <Name>StaffSelection</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
